# neva_save_manager

./: README.md  main.py  pyproject.toml  tmp.py
resources/Saves/Fall/: 05.gs  06.gs
resources/Saves/Fall Chapter 1-2/: 01 - Fall.gs  02 - Bodies.gs  03 - Forest.gs  04 - Fight.gs  07 - Hills.gs  10 - Hills.gs  15 - Hills.gs  18 - Hills.gs  19 - Elite Fight.gs  20 - Forest.gs  24 - Left Ruins.gs  26 - Left Caves.gs  27 - Left Hills.gs  28 - Left Hub.gs  33 - Right Hills.gs  34 - Right Double Bird Fight.gs  37 - Right Hills.gs  39 - Tree.gs
resources/Saves/Fall Chapter 3-4/: 04 - Forest.gs  08 - Forest.gs  11.gs  13.gs  15.gs  18.gs  20.gs  23.gs  24.gs  26.gs  30.gs  31.gs  32.gs
resources/Saves/Fall Chapter 5-6/: 01.gs  05.gs  08.gs  09.gs  13.gs  14.gs  19.gs  22.gs  25.gs  27.gs  29.gs  30.gs  31.gs  33.gs  35.gs  37.gs
resources/Saves/Summer Chapter 1-2/: 02 - Neva Awake.gs  03 - First Platforms.gs  04 - Neva Can't Climb.gs  05 - Neva Jump Save.gs  06 - Pond Start.gs  07 - Meadow.gs  08 - Meadow Pt.2.gs  10 - Cut Trees.gs  11 - Neva trapped.gs  12 - Neva Delivered.gs  13 - Clear Path for Neva.gs  14 - More Hands.gs  15 - Skippable Hands.gs
resources/Saves/Summer Chapter 3/: 01 - Summer Chapter 3.gs  05 - More Platforms.gs  06 - Forest.gs  07 - Stomp.gs  09 - More Forest.gs  10 - Plateform Fight.gs  13 - More Plateforms.gs  14 - Forest Exit.gs  15 - Meadow.gs
resources/Saves/Summer Chapter 4/: 01 - Split.gs  02 - Dodge.gs  04 - Tunnel Fight.gs  07 - Save Neva Right.gs  08 - Save Neva Hub.gs  11 - Neva Hub.gs  14 - Caves Descent.gs  15 - Waterfall.gs  (+5 more)
(+164 files in other folders)
